# qemu_esp32

./: .gitignore  BOOT.md  Dockerfile  EXCEPTION.md  QEMU_NET.md  README.md  VSCODE.md  gdbanalysis.md  heap_regions.ods  hex2bin.c  hw_sha256.md  nuttx.md  platformio.md  qemu-esp32.tar  rom.elf  s2BOOT.md  s2rompatch.c  saved.md  sdkconfig  toflash-cmake.c  toflash-s2.c  toflash.c  toflash_espressif.c  torom.c  vm0.pcap  wifi.md
.github/workflows/: main.yml
components/emul_ip/: CMakeLists.txt  emul_ip.c  emul_ip.h  lwip_ethoc.c
components/utest/: CMakeLists.txt  qemu_test.c  qemu_test.h
examples/: README.md  Vagrantfile  compile_all.sh  run_all.sh
examples/01_max_malloc/: CMakeLists.txt  Makefile  readme.md  sdkconfig
examples/02_gpio/: README.md
examples/02_uart/: CMakeLists.txt  sdkconfig  toflash.c
examples/03_dual/: .gdbinit  CMakeLists.txt  screenlog.0  screenlog.mixed  screenlog.pinned  sdkconfig
examples/03_unstall/: CMakeLists.txt  readme.md
examples/04_schedule/: CMakeLists.txt  readme.md  screenlog.0  sdkconfig
examples/04_sha/: CMakeLists.txt  README.md  toflash.c
examples/05_queue/: .gdbinit  readme.md
examples/06_1306_interactive/: CMakeLists.txt  README.md  sdkconfig  toflash.c
examples/06_duino/: Makefile  README.md  sdkconfig
examples/06_oledu8g2/: Makefile  README.md  screenlog.0  sdkconfig
examples/06_seedOLED/: Makefile  README.md  license.txt  toflash.c
examples/06_ssd1306/: Makefile  README.md  sdkconfig
examples/06_ssd1306-esp-idf-i2c/: CMakeLists.txt  README.rst  sdkconfig
examples/07_flash_mmap/: Makefile  README.md  screenlog.0  screenlog.1  screenlog.bad  sdkconfig
examples/07_flash_test/: Makefile  README.md  screenlog.0  sdkconfig
examples/07_nvs_rw_value/: README.md  sdkconfig  sdkconfig.defaults
examples/08_nvs_rw_blob/: README.md  sdkconfig
examples/09_onchip_sensor/: Makefile  readme.md  sdkconfig
examples/10_i2cscan/: CMakeLists.txt  Makefile  sdkconfig
examples/11_hvacIli9341/: Makefile  README.md  sdkconfig
examples/11_spi_nodma/: .project  BUILD  Makefile  README.md
examples/12_distance/: Makefile  README.md  sdkconfig
examples/13_http_request/: README.md  sdkconfig
examples/14_basic_webserver/: README.md  toflash.c
examples/14_bootwifi/: Makefile  README.md
examples/15_websocket/: ESP32_WS.html  README.md  screenlog.0
examples/16_wifi_sniffer/: CMakeLists.txt  Makefile  README.md  README.rst~  sdkconfig
examples/18_long_range/: README.md
examples/19_udp/: CMakeLists.txt  README.md
examples/20_timer_wakeup/: Makefile  sdkconfig
examples/21_can/: Makefile  README.md
examples/22_gsm_pppos/: .cproject  .project  BUILD  README.md  sdkconfig  sdkconfig.old
examples/23_ota/: README.md  sdkconfig  toflash.c
examples/24_esp32_explorer/: .cproject  README.rst  partitions.csv  sdkconfig  toflash.c
examples/24_wear_leveling/: README.md  partitions_example.csv  screenlog.0  sdkconfig.defaults  toflash.c
examples/25_tbconsole/: README.md
examples/26_wifigdb/: Makefile  readme.md
examples/27_jinx_matrix/: README.rst  app_main.c.orig  readme.txt.txt  sdkconfig
examples/27_wifi_matrix/: Makefile  README.md
examples/28_gdb_blackmagic/: CMakeLists.txt  Makefile  components  readme.md  screenlog.0  sdkconfig  toflash.c
examples/29_mmu/: Makefile  readme.md  toflash.c
examples/29_spiffs_example/: Makefile  README.md  screenlog.0  toflash.c
examples/29_webspiff/: .#README.md  Makefile  README.md  partitions_example.csv  sdkconfig  toflash.c
examples/30_arduino/: Makefile  README.md
examples/31_esp32-csid/: Makefile  README.md
examples/32_helltec/: README.md
examples/32_lmic/: README.md  screenlog.0
examples/32_lora/: Makefile  README.md  screenlog.0
examples/32_lora_wan/: Makefile  README.md  toflash.c
examples/32_lora_wan_gps/: Makefile
examples/32_radiohead/: Makefile  README.md
examples/33_ESP-1ch-gateway/: README.md
examples/33_pkt_fwd/: readme.md
examples/34_9DoF/: Makefile  README.md
examples/35_gps/: README.md  screenlog.0  sdkconfig  toflash.c
examples/36_nuttxspace/: README.md
examples/37_espScope/: Makefile  README.md  toflash.c
examples/38_wifiscope/: README.md  partitions_example.csv  sdkconfig.defaults  toflash.c
examples/40_bt_a2dp_source/: README.md  platformio.ini  screenlog.0  toflash.c
examples/41_http_server/: README.md
examples/42_pio_ringthing/: Makefile  README.md  flash.sh  platformio.ini  toflash.c
examples/42_websocket_oeth/: CMakeLists.txt  README.md
examples/43_sdcard/: sdkconfig
examples/44_pio_tmthing/: platformio.ini  readme.md  screenlog.0  screenlog.0.preloaded  toflash.c
examples/45_m5QwiicTwist/: README.md  platformio.ini
examples/45_m5grey/: README.md  platformio.ini
examples/46_llvm/: CMakeLists.txt  Makefile  add.c  readme.md
examples/47_zxspectrum/: platformio.ini  toflash.c
examples/48_epaper_sl/: CMakeLists.txt  README.md
examples/48_epaper_sl/main/: CMakeLists.txt  DefaultFont.c  EPD.h  EPDspi.h  Ubuntu16.c  comic24.c  ePaper.c  ePaper.h  json.c  json.h  json_private.h  main.c  spi_master_lobo.c  spi_master_lobo.h  tooney32.c
examples/48_t5_epaper1.0/: CMakeLists.txt  README.md
examples/48_t5_epaper1.0/main/: CMakeLists.txt  DejaVuSans18.c  DejaVuSans24.c  EPD.c  EPD.h  EPDspi.c  EPDspi.h  Kconfig.projbuild  SmallFont.c  dejavuX.c  ePaper.c  img1.h  img2.h  img3.h  img_hacking.c  minya24.c
gdb/: gdbinit
hdiff/: CMakeLists.txt  calculator.cpp  hdiff.cpp  nana-ogl.cpp  oc.sh  partitions.csv  plot.cpp  plot.h  qemu_partitions.csv  realtime_main.cpp  tabs.cpp
iogui/: MemoryMapped.cpp  mywcl.cpp
main/: echo.c  echo.h  emulwIP.c  lwip_ethoc.c  lwip_ethoc.h  main.c  ne2kif.c  ne2kif.h
net/: README  opencores_eth.c  socket_thread.c
net/pic32/: Compiler.h  ETHPIC32ExtPhy.c  ETHPIC32ExtPhy.h  ETHPIC32ExtPhyDP83848.c  ETHPIC32ExtPhyDP83848.h  ETHPIC32ExtPhyRegs.h  GenericTypeDefs.h  HardwareProfile.h  Microchip_eth.c  (+1 more)
qdiff/: main.cpp  mainwindow.cpp  mainwindow.h  qdiff.pro  qhexview.cpp  qhexview.h
qemu-patch/: maketar.sh  qemu-esp32.tar
sav/: hex2bin.c  ihex.c
(+575 files in other folders)
