idf_component_register(SRCS
"main.c"
"json.c"
"ePaper.c"
"DefaultFont.c"
"DejaVuSans18.c"
"DejaVuSans24.c"
"dejavuX.c"
"ePaper.c"
"EPD.c"
"EPDspi.c"
"minya24.c"
"SmallFont.c"
"tooney32.c"
"spi_master_lobo.c"
"Ubuntu16.c"
"comic24.c"
                    INCLUDE_DIRS ".")
#set(COMPONENTS_DIRS, "components")
